Add toolkit.datapotamus.render: terminal pipeline visualizer + live/captured stats
A nested-list renderer for pipeline shapes with:
  - bracket rail (⎡⎢⎣) for parallel sections, flush 2-char prefix
  - WL-color block aggregation for K× cycles (homogeneous workers
    collapse to one row; heterogeneous stay distinct)
  - per-line stats columns (queued/inflight/done/mean/p50/p99/p100)
    sourced from a histogram-based watcher, derived on demand
  - render.capture for spit/slurp EDN snapshots; render.live for
    periodic ANSI redraw

Supporting changes:
  - shape.clj: scatter-gather branches now in topo order; singleton
    classes don't K-ify; `:internal-edges` replaces `:back-edges`
  - combinators: parallel/round-robin-workers/stealing-workers tag
    container with `:combinator` so renderer can annotate
    `(parallel)` / `(round-robin-workers)` etc.
  - step.clj: surface `:combinator` in topology nodes
  - descriptive step-id renaming across hn_* and combinators
    (`:agg` → `:aggregate`, `s0`/`w0`/`e0` → `shim-0`/`worker-0`/`exit-0`)